@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${springboot3}</version>
+            <version>${springboot3}</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
 
         <!-- guava -->
@@ -32,11 +32,123 @@
         </dependency>
     </dependencies>
 
-    <build>
+<profiles>
+		<!-- SpringBoot2 -->
+		<profile>
+			<id>sb2</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<java.version>${jdk8}</java.version>
+				<springboot.version>${springboot2}</springboot.version>
+				<querydsl.version>${querydsl500}</querydsl.version>
+				<classifier></classifier>
+				<coveralls.version>4.5.0</coveralls.version>
+				<fastjson.artifactId>${fastjson_spring5}</fastjson.artifactId>
+				<fastboot.artifactId>${fastboot_spring5}</fastboot.artifactId>
+			</properties>
+			<dependencies>
+				<!-- validation -->
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-validation</artifactId>
+				</dependency>
+				<!-- test -->
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-test</artifactId>
+					<scope>test</scope>
+					<exclusions>
+						<exclusion>
+							<groupId>org.mockito</groupId>
+							<artifactId>mockito-core</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+				<dependency>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-inline</artifactId>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.2.5</version>
+						<configuration>
+							<argLine>-Dnet.bytebuddy.experimental=true</argLine>
+						</configuration>
+					</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>${jdk8}</source>
+                    <target>${jdk8}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- SpringBoot3  -->
+		<profile>
+			<id>sb3</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<java.version>${jdk21}</java.version>
+				<springboot.version>${springboot3}</springboot.version>
+				<querydsl.version>${querydsl510}</querydsl.version>
+				<classifier>jakarta</classifier>
+				<coveralls.version>5.0.0</coveralls.version>
+				<fastjson.artifactId>${fastjson_spring6}</fastjson.artifactId>
+				<fastboot.artifactId>${fastboot_spring6}</fastboot.artifactId>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>jakarta.validation</groupId>
+					<artifactId>jakarta.validation-api</artifactId>
+					<version>3.0.2</version>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate.validator</groupId>
+					<artifactId>hibernate-validator</artifactId>
+					<version>8.0.0.Final</version>
+				</dependency>
+				<dependency>
+					<groupId>jakarta.servlet</groupId>
+					<artifactId>jakarta.servlet-api</artifactId>
+					<version>6.0.0</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>jakarta.servlet.jsp</groupId>
+					<artifactId>jakarta.servlet.jsp-api</artifactId>
+					<version>3.1.1</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>jakarta.persistence</groupId>
+					<artifactId>jakarta.persistence-api</artifactId>
+					<version>3.1.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+			<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
                     <source>${jdk21}</source>
                     <target>${jdk21}</target>
@@ -47,5 +159,9 @@
             </plugin>
         </plugins>
     </build>
+		</profile>
+	</profiles>
+	
+    
 
 </project>
